@@ -1,15 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST flog-2.1.0.gem 39936 RMD160 901ae929620bf52c7a5142bef395c4795a2e62ab SHA1 2fbd4454383c46ad540ead24598125cd4e66e2b2 SHA256 7970c9054ba7401c630c6fa70dd6b01acab1ed4885b4316079483744fd97b32b
 DIST flog-2.2.0.gem 38912 RMD160 89981c134c63afac9a99d86e74884c1a649ce176 SHA1 9f8f3e34b157854c6ec92f52302395473e0ac13c SHA256 de8ddceecc4cdcb1a85d7491fed2250c854c4ed1d3884cc2602701d61cc59c1a
-EBUILD flog-2.1.0.ebuild 474 RMD160 baae2e03eecbb5779c1a68997865a954c3513c02 SHA1 5d145478e84b14f17d5e9b2c296e0f133d298a9d SHA256 ff6b447cde1112a572810f4c810e6a6d228a447e3cf7846787b396b23dab68b6
 EBUILD flog-2.2.0.ebuild 507 RMD160 e8987a6c2dcef86dcc660f6ff059cb4de7bc3a14 SHA1 0c9a1cf837cc75b6dd616c4be6a8b4fd3767bc45 SHA256 869f3f1c8c7456a1063ce491e43c52c2087097fb5a19b37bd5706358c62699da
-MISC ChangeLog 348 RMD160 fa8f448a50357799f3dac3acb83775876a00ba93 SHA1 448df5c0f17bfe703d8aef776a716203d30c27e2 SHA256 86616f6809bd98e5384dde35e7a4eb800734c71c4f53a92580a433bc4a1f45b4
+MISC ChangeLog 458 RMD160 ee118c01e0d6f7e800c675918f3a3ab2fd1e28bd SHA1 76fa683ae089725c16cf3b5eec01f25c477e243d SHA256 fc997bd8be85a27d0dbc751bbf9dc452ee9a822be48097d4ca57cd456426e941
+MISC metadata.xml 215 RMD160 682b22c57f2f17c789b244e2bb32fe15ca3fa332 SHA1 ccf017e39c3f44ac4b557da94f91096555cb1be2 SHA256 c058515dd6264789274b580e999ce4fbbb5c53c36a452bf7b32fd227980abcf8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkqeBPUACgkQVYU2Ai8K93eo+ACdG8dcHBkqNi2M8gzdACz533Iq
-I5oAoKY1BieDrEdSHH9SU+jPP8r04QJl
-=EFIZ
+iEYEARECAAYFAks3huYACgkQeM7EJeUH71PNbACeJh3qsM7dNnKKMqsdrZrajs2f
++B0AniRB+9HA08tUHBqqscO9eGK1Lc66
+=8yo2
 -----END PGP SIGNATURE-----
