@@ -1,16 +1,0 @@
-# Copyright 1999-2006 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/zentest/zentest-3.3.0.ebuild,v 1.1 2006/08/28 14:34:06 pclouds Exp $
-
-inherit gems
-
-DESCRIPTION="Flog reports the most tortured code in an easy to read pain report."
-HOMEPAGE="http://ruby.sadi.st/"
-LICENSE="MIT"
-
-KEYWORDS="~x86 ~amd64"
-SLOT="0"
-IUSE=""
-
-DEPEND=">=dev-ruby/parsetree-3.0.0
-	>=dev-ruby/sexp-processor-3.0.0"
