@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/flog
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 
+  27 Dec 2009; Hans de Graaff <graaff@gentoo.org> -flog-2.1.0.ebuild,
+  +metadata.xml:
+  Remove old version.
+
 *flog-2.2.0 (02 Sep 2009)
 
   02 Sep 2009; Hans de Graaff <graaff@gentoo.org> +flog-2.2.0.ebuild:
